@@ -240,5 +240,67 @@ std::ostream& operator<<(std::ostream& str, Bld::BldDataEBeamV5::DamageMask enva
   }
   return str << val;
 }
+std::ostream& operator<<(std::ostream& str, Bld::BldDataEBeamV6::DamageMask enval) {
+  const char* val;
+  switch (enval) {
+  case Bld::BldDataEBeamV6::EbeamChargeDamage:
+    val = "EbeamChargeDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamL3EnergyDamage:
+    val = "EbeamL3EnergyDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamLTUPosXDamage:
+    val = "EbeamLTUPosXDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamLTUPosYDamage:
+    val = "EbeamLTUPosYDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamLTUAngXDamage:
+    val = "EbeamLTUAngXDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamLTUAngYDamage:
+    val = "EbeamLTUAngYDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamPkCurrBC2Damage:
+    val = "EbeamPkCurrBC2Damage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamEnergyBC2Damage:
+    val = "EbeamEnergyBC2Damage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamPkCurrBC1Damage:
+    val = "EbeamPkCurrBC1Damage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamEnergyBC1Damage:
+    val = "EbeamEnergyBC1Damage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamUndPosXDamage:
+    val = "EbeamUndPosXDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamUndPosYDamage:
+    val = "EbeamUndPosYDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamUndAngXDamage:
+    val = "EbeamUndAngXDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamUndAngYDamage:
+    val = "EbeamUndAngYDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamXTCAVAmplDamage:
+    val = "EbeamXTCAVAmplDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamXTCAVPhaseDamage:
+    val = "EbeamXTCAVPhaseDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamDumpChargeDamage:
+    val = "EbeamDumpChargeDamage";
+    break;
+  case Bld::BldDataEBeamV6::EbeamPhotonEnergyDamage:
+    val = "EbeamPhotonEnergyDamage";
+    break;
+  default:
+    return str << "DamageMask(" << int(enval) << ")";
+  }
+  return str << val;
+}
 } // namespace Bld
 } // namespace Pds
